projects/contemporaryConsultant/stylesheets/scxn.css
/* ... */
.m3{margin: var(--s3);}				.m4{margin: var(--s4);}
.m5{margin: var(--s5);}				.m6{margin: var(--s6);}
/*margin left*/
.mL1{margin-left: var(--s1);}		.mL2{margin-left: var(--s2);}
.mL3{margin-left: var(--s3);}		.mL4{margin-left: var(--s4);}
.mL5{margin-left: var(--s5);}		.mL6{margin-left: var(--s6);}
/*margin right*/
.mR1{margin-right: var(--s1);}		.mR2{margin-right: var(--s2);}
.mR3{margin-right: var(--s3);}		.mR4{margin-right: var(--s4);}
.mR5{margin-right: var(--s5);}		.mR6{margin-right: var(--s6);}
/*Hi-liters*/
.orange{background-color: orange;}
.pink{background-color: var(--c5);}
.green{background-color: var(--c6)}
.blue{background-color: var(--cH);}
.darkBlue{background-color: var(--c1);}
.brown{background-color: var(--c4);}
.yellow{background-color: yellow;}
.red{background-color: magenta;}
.hL{background-color: rgba(255, 0, 255, 0.588);}/*Highlighter*/
.hL1{background-color: rgba(126, 252, 0, 0.342);}/*Highlighter*/
.hL2{background-color: rgba(0, 255, 255, 0.588);}/*Highlighter*/
.hL3{background-color: red;}
.nW{white-space: nowrap;}/*noWrap*/
.strictX{overflow-x: hidden;}
.strictY{overflow-y: hidden;}
.strict{overflow: hidden;}
.bgW{background-color:white;}
.bg1{background-color: var(--c6);}
.bg2{background-color: var(--c5);}
.ex{letter-spacing: 2vw;}
.exJr{letter-spacing:1vw;}
.exJr2{letter-spacing:.45vw;}
.exJr3{letter-spacing:.123em;}
.diminutive{font-size: 9.99pt;}
.dwarf{font-size: 13pt;}
.wiener{font-size: 6pt;}.wiener.big{font-size: 6pt;}
.sM{font-size: 17pt;}/*standardMini*/
.mM{font-size: 27pt;}/*mediumMini*/
.bM{font-size: 39pt;}/*bigMini*/
.mB{font-size: 55pt;}/*mediumBiggie*/
.caps{text-transform: uppercase;}
.lower{text-transform: lowercase !important;}
.smallCaps{font-variant:small-caps;}
.initial::first-letter{
	float: left;
	margin: .37em 0px 0 1.5px;
	padding: 0 3px 1px 0;
	font-size: 27pt;
	font-weight: 700;
	font-family: 'Josefin Sans', sans-serif;
}
.initialR::first-letter{
	font-size: 22pt;
	font-weight: 900;
}

.lH{height: 1.45em;}
.lH1{line-height: .66em;}	.lH2{line-height: 1.1em;}
.lH3{line-height: 1.7em;}	.lH4{line-height: 2em;}
.lH5{line-height: 2.7em;}	.lH6{line-height: 2rem;}

.floatLeft{float: left;}
.floatRight{float: right;}
.japanese{
	-webkit-writing-mode: vertical-rl;
	-moz-writing-mode: vertical-rl;
	-ms-writing-mode: vertical-rl;
	writing-mode: vertical-rl;
	font-weight: bolder;
	letter-spacing: .123em;
}
.japanese.accented::first-letter{
	display: flex;
	background-color: var(--cH);
	padding: 17px;
	font-size: 24pt;
	margin-bottom: 22px;
	color: white;
}

/*inline*/
a{
	color: var(--cA);
	text-decoration: none;
}
a:hover{
	color: var(--c6);
	text-decoration: underline;
	text-decoration-color: var(--c2);
	background-color:transparent;
	border-color: black;
}
.current{background-color: var(--cH)!important;}
a:active{background-color: var(--cH);}
a:focus{color: var(--cH);}
a:visited{color: var(--c6)}
label{font: var(--f4); font-size: 17pt; padding-top:var(--s1);}
button{font: var(--f4); font-size: 27pt;}
input[type=text], select {
	width: 100%;
	padding: 12px 20px;
	margin: 8px 0;
	display: inline-block;
	border: 1px solid #ccc;
	border-radius: 4px;
	box-sizing: border-box;
  }

/*blocks*/

nav {
    height: 45px;
	position: sticky!important; 
    top: 0px;
    transition: top 0.2s ease-in-out;
	margin: 0 auto;
	padding: 0;
	z-index: 999;
	border-bottom: 1px solid var(--cH);
}
p{line-height: 1.6em;}
h6{
	font:var(--f4); 
	font-size: 21pt;
}
h5{font:var(--f4); font-size: 27pt;}
h4{font:var(--f5);color: var(--c3);}
h3{font:var(--f2); font-size: 27pt;}
h2{font:var(--f4);}
h1{font: var(--f1);}
/* h1{font:var(--f3);} */
small{font-size: 13pt;}

ol{
	line-height: 1.6em; 
	list-style-type: upper-roman;
}

.maxed{max-width: 900px;}
/*Style*/
h1{
	font: var(--f1);
	font-weight: 900;
	font-size: 48pt;
}

  /*extra-long address string*/
.publicKeys{line-break:anywhere;}

/*Images or text block wrappers*/
.wallets{width: 54px;height: 54px;}
.socials{width: 54px;height: 54px;
	border-radius: 100%;	
}
a.shareTo{
	margin: 0px 0px !important;
	padding: 0px !important;
	display: inline;
	width: 45px !important; 
	height: 45px !important;
	overflow: hidden;
}
.shareIcons{
	width: 45px; 
	height: 45px;
	margin: 0 auto !important; 
	padding: 0px !important;
}

a.noHover:hover {background-color:transparent;}
a.noDecoration:hover {text-decoration: none;}
a.tB:visited,a.tB:hover{color: var(--c3);}
a.tW:visited{color: white;}
a.tW:hover{color: white; background-color: var(--cH);}

.sideScroll::-webkit-scrollbar{height: 3px;transition: .123s;}
.sideScroll::-webkit-scrollbar-track {background: transparent; transition: .234s; height: 9px;}
.sideScroll::-webkit-scrollbar-track:hover {background: transparent; cursor: grab;}
.sideScroll::-webkit-scrollbar-thumb{background: var(--c6);border-radius: 4.5px;}
.sideScroll::-webkit-scrollbar-thumb:hover{background: var(--c6);}
.vertScroll::-webkit-scrollbar{width: 10px;}
.vertScroll:-webkit-scrollbar-track{background: var(--c4);}
.vertScroll::-webkit-scrollbar-thumb{background: var(--c6);border-radius: 4.5px;}
.vertScroll::-webkit-scrollbar-thumb:hover{background: var(--c6);}

.btn{
	border: 1px solid rgba(0, 0, 0, 0.213);
	border-radius: 0px;
}
.btn:hover{border-color: darkgray;}
.btn:active,
.btn:focus{border-color: var(--cH);}
.carousel-inner img {
	width:100%;
	height: 54vh;
	object-fit: cover;
	object-position: 50% 50%;
	border-top: 1px solid black;
	border-bottom: 1px solid black;
}
stinger.stinger>*,
abstract.abstract>*{
	display: none;
	line-height: .9em;
}
stinger.stinger p:first-of-type{
	display: block;
	font-style: normal;
	font-variant: normal;
}
strike{font-variant: normal;
font-style: normal;}
abstract.abstract p:nth-of-type(2){
	display: block;
}
feature.feature{
	overflow: hidden;
	text-overflow: ellipsis;
}
.clamp10{
	display: -webkit-box;
	-webkit-line-clamp:10;
	-webkit-box-orient: vertical;
	overflow: hidden;
}

#returnHomeCase{
	position: fixed;
	bottom: 42px;
	left: 0px;
	z-index: 99999000;
}
/* ... */

